[package]
name = "teepee"
version = "0.1.0"
authors = ["Vojtech Kral <vojtech@kral.hk>"]

[features]
default = ["gtk_v3_16"]
gtk_v3_16 = ["gtk/v3_16"]

[dependencies]
glib = "^0"
glib-sys = "^0"
gio = "^0"
gdk = "^0"
gtk = "^0"
gdk-sys = "^0"
cairo-rs = "^0"
tp-app = { path = "ws/tp-app" }

[workspace]
members = [
	"ws/tp-app",
	"ws/tp-term",
	"ws/tp-pty",
]
